data/derived/sp14/progs/unify/prog2724.ml.out
Characters 118-141:
  List.fold_left f base l;;
  ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type string
